fix: hack antd switch for dark mode

--- a/src/index.sass
+++ b/src/index.sass
@@ -56,6 +56,9 @@ code, .code-font
   .ant-segmented-group > *
     border-radius: 5px
 
+.ant-switch:not(.ant-switch-checked)
+  background-color: #aaaa
+
 @include for-desktop
   .ant-message
     top: $header-low-height+5px
